--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -52,50 +52,19 @@
 				android:layout_gravity="center_horizontal"
 				android:layout_marginStart="@dimen/spacing_medium_large"
 				android:layout_marginEnd="@dimen/spacing_medium_large"
+				android:layout_marginBottom="10dp"
 				android:text="@string/button_report_illness" />
 
-			<LinearLayout
-				android:layout_width="match_parent"
+			<Button
+				android:id="@+id/main_button_sync"
+				style="@style/NextStep.Button.Outlined"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_marginTop="@dimen/spacing_larger"
-				android:layout_marginBottom="@dimen/spacing_medium_large"
-				android:orientation="horizontal">
-
-				<ImageView
-					android:id="@+id/status_icon"
-					android:layout_width="@dimen/icon_size_title"
-					android:layout_height="@dimen/icon_size_title"
-					android:src="@drawable/ic_warning"
-					android:tint="@color/status_red" />
-
-				<LinearLayout
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_marginStart="@dimen/spacing_medium"
-					android:layout_weight="1"
-					android:orientation="vertical">
-
-					<TextView
-						android:id="@+id/status_title"
-						style="@style/NextStep.Text.Status"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="1dp"
-						android:layout_marginBottom="2dp"
-						android:text="@string/preview_warning_title"
-						android:textColor="@color/grey_dark" />
-
-					<TextView
-						android:id="@+id/status_text"
-						style="@style/NextStep.Text"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:text="@string/preview_warning_text"
-						android:textColor="@color/grey_dark" />
-
-				</LinearLayout>
-
-			</LinearLayout>
+				android:layout_gravity="center_horizontal"
+				android:layout_marginStart="@dimen/spacing_medium_large"
+				android:visibility="gone"
+				android:layout_marginEnd="@dimen/spacing_medium_large"
+				android:text="@string/button_sync" />
 
 		</LinearLayout>
 
