--- a/app/src/main/res/layout/view_header.xml
+++ b/app/src/main/res/layout/view_header.xml
@@ -9,7 +9,8 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:layout_height="@dimen/header_height"
 	tools:layout_width="match_parent"
-	tools:parentTag="android.widget.FrameLayout">
+	tools:parentTag="android.widget.FrameLayout"
+	>
 
 	<ImageView
 		android:id="@+id/main_header_icon_bg"
